lab1 things except resume page

--- a/projects/index.html
+++ b/projects/index.html
@@ -3,34 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shekar: Personal Site and Portfolio</title>
+    <title>projects index page</title>
     <h1>
-        Shekar Krishnamoorthy
+        projects home
     </h1>
     <link rel="stylesheet" href="styles/your-stylesheet-name.css">
 </head>
 <body>
-    <p>
-        Hello everyone I am Shekar Krishnamoorthy 
-        and I am a pretty cool person. I am a junior at 
-        UCSD and I study data scientist. In my free time 
-        I like to play competitive sports.
-    </p>
 
- 
+
     <nav>
         <ul>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="contact/index.html" class="active">Contacts</a></li>
-            <li><a href="projects/index.html" class="active">Projects</a></li>
             <li><a href="https://github.com/shekark642" target="_blank">GitHub</a></li>
 
         </ul>
     </nav>
-        
 
 
-    <img src="images/shake.jpg" alt="me sometime ago" />
-
-    
 </body>
 </html>
