--- a/projects/index.html
+++ b/projects/index.html
@@ -7,19 +7,57 @@
     <h1>
         projects home
     </h1>
-    <link rel="stylesheet" href="styles/your-stylesheet-name.css">
+
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+
+    <script src="../global.js" type="module"></script>
+
+
 
 
     <nav>
         <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="contact/index.html" class="active">Contacts</a></li>
-            <li><a href="https://github.com/shekark642" target="_blank">GitHub</a></li>
+            
+            <li><a href="../index.html" class = "current">Home</a></li>
+            <li><a href="../contact/index.html" class = 'current'>Contacts</a></li>
+            <li><a href="https://github.com/shekark642" >GitHub</a></li>
 
         </ul>
+        <button id="dark-mode-toggle">🌙</button>
     </nav>
+
+
+        <div class = "projects">
+
+
+            <article>
+                <h2>Project One</h2>
+                <img src="../images/proj1_106 ss.png" alt="Project One">
+                <p>This is a visualization showing the correlation of sunshine and rain across the four seasons</p>
+            </article>
+
+            <article>
+                <h2>Project Two</h2>
+                <img src="" alt="Project Two">
+                <p>N/A</p>
+            </article>
+
+            <article>
+                <h2>Project Three</h2>
+                <img src="" alt="Project Three">
+                <p>N/A</p>
+            </article>
+
+            <article>
+                <h2>Project Four</h2>
+                <img src="" alt="Project Four">
+                <p>N/A</p>
+            </article>
+            
+        </div>
+
 
 
 </body>
