--- a/contact/index.html
+++ b/contact/index.html
@@ -7,17 +7,21 @@
     <h1>
         contacts home
     </h1>
-    <link rel="stylesheet" href="styles/your-stylesheet-name.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
+    <script src="../global.js" type="module"></script>
+
+
     <nav>
         <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="projects/index.html" class="active">Projects</a></li>
+            <li><a href="../index.html" class="current">Home</a></li>
+            <li><a href="../projects/index.html" class="current">Projects</a></li>
             <li><a href="https://github.com/shekark642" target="_blank">GitHub</a></li>
 
         </ul>
+        <button id="dark-mode-toggle">🌙</button>
     </nav>
 
 
@@ -46,3 +50,4 @@
     
 </body>
 </html>
+
