--- a/projects/index.html
+++ b/projects/index.html
@@ -18,6 +18,7 @@
 
 
     <nav>
+        <!--
         <ul>
             
             <li><a href="../index.html" class = "current">Home</a></li>
@@ -25,6 +26,7 @@
             <li><a href="https://github.com/shekark642" >GitHub</a></li>
 
         </ul>
+        -->
         <button id="dark-mode-toggle">🌙</button>
     </nav>
 
@@ -35,7 +37,7 @@
             <article>
                 <h2>Project One</h2>
                 <img src="../images/proj1_106 ss.png" alt="Project One">
-                <p>This is a visualization showing the correlation of sunshine and rain across the four seasons</p>
+                <p>HTML This is a visualization showing the correlation of sunshine and rain across the four seasons</p>
             </article>
 
             <article>
