--- a/meta/index.html
+++ b/meta/index.html
@@ -36,6 +36,7 @@
         <!-- Add: Time, author, lines edited -->
       </dl>
 
+      <p id="selection-count">No commits selected</p>
 
     
 
@@ -44,6 +45,7 @@
     <script src="../global.js" type="module"></script>
     <script src="main.js" type="module"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <dl id="language-breakdown" class="stats"></dl>
 
 
 
