--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <body>
 
     <div id="profile-stats">
-         stuff
+        <p>
+            Github Stats:
+        </p>
     </div>
 
     <script src="index.js" type="module" defer></script>
