--- a/contact/index.html
+++ b/contact/index.html
@@ -15,7 +15,7 @@
 
 
 
-    <h1>Contact Us</h1>
+    <h1>Contact Me!</h1>
     <form action="mailto:shekar.km26@gmail.com" method="POST" enctype="text/plain">
         <!-- Email Field -->
         <label for="email">Your Email:</label>
