--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
     <img src="images/shake.jpg" alt="me sometime ago" class = img />
 
 
+    <div class="social-boxes">
+        <a href="https://github.com/shekark642" target="_blank" class="box">GitHub</a>
+        <a href="https://www.linkedin.com/in/shekar-krishnamoorthy-154b68230/" target="_blank" class="box">LinkedIn</a>
+        <a href="files/Shekar Krishnamoorthy Resume.pdf" download class="box">Resume</a>
+    </div>
+
+
     <h2>Latest Project:</h2>
     <div class="projects">
         <!-- Dynamically added content will appear here -->
