--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>
         Hello everyone I am Shekar Krishnamoorthy 
         and I am a pretty cool person. I am a junior at 
-        UCSD and I study data scientist. In my free time 
+        UCSD and I study data science. In my free time 
         I like to play competitive sports.
     </p>
 
