--- a/meta/index.html
+++ b/meta/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meta Page</title>
     <h1>
-        Meta Page
+        Stats about this Repository!
     </h1>
 
     <link rel="stylesheet" href="../style.css">
